syntax = "proto3";

package market;

// Level of granularity
enum Level {
    L1 = 0; // Top of Book
    L2 = 1; // 5 Levels
    L3 = 2; // Full Book
}

// Side of the order
enum Side {
    BID = 0;
    ASK = 1;
}

// A single price level
message PriceLevel {
    double price = 1;
    double size = 2; // Quantity
}

// Heartbeat message to keep connection alive
message Heartbeat {
    int64 timestamp = 1;
    uint64 sequence = 2;
}

// Market Data Update (Delta)
message MarketUpdate {
    uint64 sequence = 1;
    int64 timestamp = 2;
    string market_id = 3;
    Level level = 4;
    
    repeated PriceLevel bids = 5;
    repeated PriceLevel asks = 6;
    
    bool is_snapshot = 7; // true = Snapshot, false = Delta
}

// Wrapper to handle different message types in one stream
message RealtimeMessage {
    oneof content {
        Heartbeat heartbeat = 1;
        MarketUpdate update = 2;
        BatchMessage batch = 3;
    }
}

message BatchMessage {
    repeated RealtimeMessage messages = 1;
}
